[package]
name = "resize-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
magick_rust = "0.16.0"
walkdir = "2.3.2"
anyhow = "1.0.51"
rayon = "1.6.0"
