[package]
name = "resize-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }

walkdir = "2.3.2"
anyhow = "1.0.51"
rayon = "1.6.0"
num-traits = "0.2"
image = "0.24.5"
num-derive = "0.3"
num = "0.4.0"
indicatif = {version = "0.17.2", features = ["rayon"]}
